# cart_pole_reinforcement_learning

commander/: CMakeLists.txt  package.xml
commander/launch/: commander.launch.py
commander/scripts/: ddqn_learning.py  dqn_learning.py  gazebo_service_helper.py  optimize_pid_learning.py  pid_learning.py  q_learning.py
commander/scripts/common/: fcq_network.py  pose_subscriber.py  shared_state.py  training_config.py
commander/scripts/common/strategies/: e_greedy_exp_strategy.py  e_greedy_linear_strategy.py  e_greedy_strategy.py  greedy_strategy.py
commander/scripts/helpers/: controller_manager_helper.py  timing_test.py
model_reset_plugin/: CMakeLists.txt  package.xml
model_reset_plugin/src/: ModelResetPlugin.cc  ModelResetPlugin.hh
robot_control/: CMakeLists.txt  package.xml
robot_control/config/: controller.yaml
robot_description/: CMakeLists.txt  package.xml
robot_description/robot/: cart_pole.sdf  cart_pole.urdf  cart_pole.urdf.xacro  old_cart_pole.urdf
robot_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
robot_description/urdf/cart/: cart.urdf.xacro
robot_description/urdf/pole/: pole.gazebo.xacro  pole.urdf.xacro
robot_description/urdf/tip/: tip.urdf.xacro
robot_launch/: CMakeLists.txt  package.xml
robot_launch/launch/: launch_simulation.launch.py
robot_launch/worlds/: poleTraining.sdf
